--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,12 @@ dependencies:
   cupertino_icons: ^1.0.2
   image_picker: ^1.0.7
   firebase_core: ^2.24.2
-  cloud_firestore: ^4.14.0
+  cloud_firestore: ^4.15.3
   firebase_auth: ^4.16.0
   smooth_page_indicator: ^1.1.0
   flutter_onboarding_slider: ^1.0.11
+  firebase_storage: ^11.6.4
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
