--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,15 +34,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  image_picker: ^1.0.7
-  firebase_core: ^2.24.2
-  cloud_firestore: ^4.15.3
-  firebase_auth: ^4.16.0
-  smooth_page_indicator: ^1.1.0
-  flutter_onboarding_slider: ^1.0.11
-  firebase_storage: ^11.6.4
-  uuid: ^4.3.3
+  cupertino_icons:
+  image_picker:
+  firebase_core:
+  firebase_auth:
+  smooth_page_indicator:
+  flutter_onboarding_slider:
+  firebase_storage:
+  uuid:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
