--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,9 @@ dependencies:
   firebase_storage:
   uuid:
   cloud_firestore:
-  loading_indicator: ^3.1.1
-  achievement_view: ^1.0.1
+  loading_indicator:
+  achievement_view:
+  http:
 
 dev_dependencies:
   flutter_test:
